feat(zk): implement `V1FloorPlanner`
See [V1FloorPlanner](https://github.com/kroma-network/halo2/blob/7d0a36990452c8e7ebd600de258420781a9b7917/halo2_proofs/src/circuit/floor_planner/v1.rs#L59-L150)

--- a/tachyon/zk/plonk/circuit/examples/BUILD.bazel
+++ b/tachyon/zk/plonk/circuit/examples/BUILD.bazel
@@ -21,11 +21,31 @@ tachyon_cc_library(
     deps = ["//tachyon/zk/plonk/circuit"],
 )
 
+tachyon_cc_library(
+    name = "simple_lookup_v1_circuit",
+    hdrs = ["simple_lookup_v1_circuit.h"],
+    deps = [
+        "//tachyon/zk/plonk/circuit",
+        "//tachyon/zk/plonk/circuit/floor_planner/v1:v1_floor_planner",
+    ],
+)
+
+tachyon_cc_library(
+    name = "simple_v1_circuit",
+    hdrs = ["simple_v1_circuit.h"],
+    deps = [
+        "//tachyon/zk/plonk/circuit",
+        "//tachyon/zk/plonk/circuit/floor_planner/v1:v1_floor_planner",
+    ],
+)
+
 tachyon_cc_unittest(
     name = "examples_unittests",
     srcs = [
         "simple_circuit_unittest.cc",
         "simple_lookup_circuit_unittest.cc",
+        "simple_lookup_v1_circuit_unittest.cc",
+        "simple_v1_circuit_unittest.cc",
     ],
     deps = [
         ":circuit_test",
